--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
     "react-dropzone": "^11.3.4",
+    "react-export-excel": "^0.5.3",
     "react-hook-form": "^7.12.2",
     "react-papaparse": "^3.16.1",
     "react-radio-buttons": "^1.2.2",
